--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,11 @@ override_dh_auto_clean:
 override_dh_auto_test:
 
 override_dh_install: $(PREPROCESS_FILES:.in=)
-	dh_install --fail-missing
+	dh_install
+
+# Note that this is the default with compat level 12.
+override_dh_missing:
+	dh_missing --list-missing
 
 %:
 	dh $@ --buildsystem=qmake --parallel
