--- a/debian-qt5/control
+++ b/debian-qt5/control
@@ -1,12 +1,12 @@
 Source: nymea-experience-plugin-energy
 Section: utils
 Priority: optional
-Maintainer: nymea GmbH <developer@nymea.io>
+Maintainer: chargebyte austria GmbH <contact@nymea.io>
 Standards-Version: 4.6.0
 Homepage: https://nymea.io
-Build-Depends: debhelper (>= 9.0.0),
-               dpkg-dev (>= 1.16.1~),
-               libnymea-dev (>= 0.17),
+Build-Depends: debhelper,
+               dpkg-dev,
+               libnymea-dev,
                nymea-dev-tools:native,
                qt5-qmake,
                qtbase5-dev,
@@ -42,4 +42,3 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          libnymea-energy (= ${binary:Version}),
 Description: Library for nymea expergy experience plugins - Development files
-
